--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ButtonActivity">
+        <activity android:name=".ProgressBarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +26,8 @@
         <!-- </intent-filter> -->
         <!-- </activity> -->
         <activity android:name=".MainActivity" />
-        <activity android:name=".TextActivity"></activity>
+        <activity android:name=".TextActivity" />
+        <activity android:name=".ButtonActivity"></activity>
     </application>
 
 </manifest>
